# react-native-voice-to-text

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VoiceToText.podspec  package.json  react-native-voice-to-text.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/voicetotext/: VoiceToTextModule.java  VoiceToTextModule.kt  VoiceToTextPackage.java
android/src/newarch/: VoiceToTextSpec.java
android/src/oldarch/: VoiceToTextSpec.java
cpp/: react-native-voice-to-text.cpp  react-native-voice-to-text.h
example/: package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/voicetotextexample/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/VoiceToTextExample.xcodeproj/: project.pbxproj
example/ios/VoiceToTextExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: VoiceToText.h  VoiceToText.mm
lib/commonjs/: NativeVoiceToText.js  NativeVoiceToText.js.map  index.js  index.js.map
lib/module/: NativeVoiceToText.js  NativeVoiceToText.js.map  index.js  index.js.map
lib/typescript/src/: NativeVoiceToText.d.ts  NativeVoiceToText.d.ts.map  index.d.ts  index.d.ts.map
src/: NativeVoiceToText.ts  index.tsx
